<resources>
    <string name="app_name">SiMovies</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="msg_bar_home">Find Movies, Tv series,\nand more..</string>
    <string name="msg_bar_bookmark"><![CDATA[Bookmark Your Favorite\nMovies & Tv series]]></string>
    <string name="title_movies">Movies</string>
    <string name="title_tvseries">Tv Series</string>
    <string name="title_content">Content</string>
    <string name="title_image_poster_detail">image poster detail</string>
    <string name="title_release_date">Release date</string>
    <string name="title_genre">Genre</string>
    <string name="title_synopsis">Synopsis</string>
    <string name="title_screenshot">Screenshot</string>
    <string name="title_detail">Detail</string>
    <string name="msg_data_not_found">Data Not Found</string>
    <string name="title_minutes">%1$s minutes</string>
</resources>