<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amary.simovies.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.amary.simovies.bookmark.ui.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_navigation_bookmark_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_content"
        android:name="com.amary.simovies.ui.content.ContentFragment"
        android:label="@string/title_content"
        tools:layout="@layout/fragment_content" >
        <action
            android:id="@+id/action_navigation_content_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.amary.simovies.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />
</navigation>